--- a/index.html
+++ b/index.html
@@ -101,8 +101,59 @@
        <form id="add-form" class="p-5 space-y-4">
         <div><label class="block text-sm font-medium text-gray-700 mb-1">Nama Siswa</label> <input type="text" id="input-nama" required placeholder="Masukkan nama lengkap" class="w-full px-4 py-2.5 rounded-lg border border-gray-300 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition-all">
         </div>
-        <div><label class="block text-sm font-medium text-gray-700 mb-1">Kelas</label> <select id="input-kelas" required class="w-full px-4 py-2.5 rounded-lg border border-gray-300 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition-all"> <option value="">Pilih Kelas</option> <option value="X RPL 1">X RPL 1</option> <option value="X RPL 2">X RPL 2</option> <option value="X TKJ 1">X TKJ 1</option> <option value="X TKJ 2">X TKJ 2</option> <option value="X MM 1">X MM 1</option> <option value="X MM 2">X MM 2</option> <option value="XI RPL 1">XI RPL 1</option> <option value="XI RPL 2">XI RPL 2</option> <option value="XI TKJ 1">XI TKJ 1</option> <option value="XI TKJ 2">XI TKJ 2</option> <option value="XI MM 1">XI MM 1</option> <option value="XI MM 2">XI MM 2</option> <option value="XII RPL 1">XII RPL 1</option> <option value="XII RPL 2">XII RPL 2</option> <option value="XII TKJ 1">XII TKJ 1</option> <option value="XII TKJ 2">XII TKJ 2</option> <option value="XII MM 1">XII MM 1</option> <option value="XII MM 2">XII MM 2</option> </select>
-        </div>
+       <div>
+    <label class="block text-sm font-medium text-gray-700 mb-1">
+        Kelas
+    </label>
+
+    <select 
+        id="input-kelas" 
+        required 
+        class="w-full px-4 py-2.5 rounded-lg border border-gray-300 
+               focus:ring-2 focus:ring-emerald-500 
+               focus:border-emerald-500 transition-all">
+        <option value="">Pilih Kelas</option>
+
+        <!-- Kelas X -->
+        <option value="X PS 1">X PS 1</option>
+        <option value="X PS 2">X PS 2</option>
+        <option value="X TKJ 1">X TKJ 1</option>
+        <option value="X TKJ 2">X TKJ 2</option>
+        <option value="X DKV 1">X DKV 1</option>
+        <option value="X DKV 2">X DKV 2</option>
+        <option value="X PM 1">X PM 1</option>
+        <option value="X PM 2">X PM 2</option>
+        <option value="X MPLB 1">X MPLB 1</option>
+        <option value="X MPLB 2">X MPLB 2</option>
+        <option value="X MPLB 2">X MPLB 3</option>
+        <!-- Kelas XI -->
+       <option value="XI PS 1">XI PS 1</option>
+        <option value="XI PS 2">XI PS 2</option>
+        <option value="XI TKJ 1">XI TKJ 1</option>
+        <option value="XI TKJ 2">XI TKJ 2</option>
+        <option value="XI DKV 1">XI DKV 1</option>
+        <option value="XI DKV 2">XI DKV 2</option>
+        <option value="XI PM 1">XI PM 1</option>
+        <option value="XI PM 2">XI PM 2</option>
+        <option value="XI MPLB 1">XI MPLB 1</option>
+        <option value="XI MPLB 2">XI MPLB 2</option>
+        <option value="XI MPLB 2">XI MPLB 3</option>
+
+        <!-- Kelas XII -->
+        <option value="XII PS 1">XII PS 1</option>
+        <option value="XII PS 2">XII PS 2</option>
+        <option value="XII TKJ 1">XII TKJ 1</option>
+        <option value="XII TKJ 2">XII TKJ 2</option>
+        <option value="XII DKV 1">XII DKV 1</option>
+        <option value="XII DKV 2">XII DKV 2</option>
+        <option value="XII PM 1">XII PM 1</option>
+        <option value="XII PM 2">XII PM 2</option>
+        <option value="XII MPLB 1">XII MPLB 1</option>
+        <option value="XII MPLB 2">XII MPLB 2</option>
+        <option value="XII MPLB 2">XII MPLB 3</option>
+    </select>
+</div>
+
         <div class="grid grid-cols-2 gap-3">
          <div><label class="block text-sm font-medium text-gray-700 mb-1">Jumlah Juz</label> <input type="number" id="input-juz" required min="0" max="30" placeholder="0" class="w-full px-4 py-2.5 rounded-lg border border-gray-300 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 transition-all">
          </div>
@@ -117,8 +168,60 @@
        </div>
       </div><!-- Filter -->
       <div class="glass-card rounded-2xl shadow-xl border border-emerald-100 mt-4 p-4">
-       <h3 class="font-semibold text-gray-700 mb-3">Filter Kelas</h3><select id="filter-kelas" class="w-full px-4 py-2.5 rounded-lg border border-gray-300 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500"> <option value="">Semua Kelas</option> <option value="X RPL 1">X RPL 1</option> <option value="X RPL 2">X RPL 2</option> <option value="X TKJ 1">X TKJ 1</option> <option value="X TKJ 2">X TKJ 2</option> <option value="X MM 1">X MM 1</option> <option value="X MM 2">X MM 2</option> <option value="XI RPL 1">XI RPL 1</option> <option value="XI RPL 2">XI RPL 2</option> <option value="XI TKJ 1">XI TKJ 1</option> <option value="XI TKJ 2">XI TKJ 2</option> <option value="XI MM 1">XI MM 1</option> <option value="XI MM 2">XI MM 2</option> <option value="XII RPL 1">XII RPL 1</option> <option value="XII RPL 2">XII RPL 2</option> <option value="XII TKJ 1">XII TKJ 1</option> <option value="XII TKJ 2">XII TKJ 2</option> <option value="XII MM 1">XII MM 1</option> <option value="XII MM 2">XII MM 2</option> </select>
-      </div>
+    
+    <h3 class="font-semibold text-gray-700 mb-3">
+        Filter Kelas
+    </h3>
+
+    <select 
+        id="filter-kelas"
+        class="w-full px-4 py-2.5 rounded-lg border border-gray-300 
+               focus:ring-2 focus:ring-emerald-500 
+               focus:border-emerald-500"
+    >
+        <option value="">Semua Kelas</option>
+
+        <!-- Kelas X -->
+        <option value="X PS 1">X PS 1</option>
+        <option value="X PS 2">X PS 2</option>
+        <option value="X TKJ 1">X TKJ 1</option>
+        <option value="X TKJ 2">X TKJ 2</option>
+        <option value="X DKV 1">X DKV 1</option>
+        <option value="X DKV 2">X DKV 2</option>
+        <option value="X PM 1">X PM 1</option>
+        <option value="X PM 2">X PM 2</option>
+        <option value="X MPLB 1">X MPLB 1</option>
+        <option value="X MPLB 2">X MPLB 2</option>
+        <option value="X MPLB 2">X MPLB 3</option>
+        <!-- Kelas XI -->
+       <option value="XI PS 1">XI PS 1</option>
+        <option value="XI PS 2">XI PS 2</option>
+        <option value="XI TKJ 1">XI TKJ 1</option>
+        <option value="XI TKJ 2">XI TKJ 2</option>
+        <option value="XI DKV 1">XI DKV 1</option>
+        <option value="XI DKV 2">XI DKV 2</option>
+        <option value="XI PM 1">XI PM 1</option>
+        <option value="XI PM 2">XI PM 2</option>
+        <option value="XI MPLB 1">XI MPLB 1</option>
+        <option value="XI MPLB 2">XI MPLB 2</option>
+        <option value="XI MPLB 2">XI MPLB 3</option>
+
+        <!-- Kelas XII -->
+        <option value="XII PS 1">XII PS 1</option>
+        <option value="XII PS 2">XII PS 2</option>
+        <option value="XII TKJ 1">XII TKJ 1</option>
+        <option value="XII TKJ 2">XII TKJ 2</option>
+        <option value="XII DKV 1">XII DKV 1</option>
+        <option value="XII DKV 2">XII DKV 2</option>
+        <option value="XII PM 1">XII PM 1</option>
+        <option value="XII PM 2">XII PM 2</option>
+        <option value="XII MPLB 1">XII MPLB 1</option>
+        <option value="XII MPLB 2">XII MPLB 2</option>
+        <option value="XII MPLB 2">XII MPLB 3</option>
+    </select>
+
+</div>
+
      </div><!-- Ranking Table -->
      <div class="lg:col-span-2">
       <div class="glass-card rounded-2xl shadow-xl border border-emerald-100 overflow-hidden">
@@ -204,7 +307,7 @@
     </div>
    </main><!-- Footer -->
    <footer class="text-center py-6 text-gray-500 text-sm border-t border-emerald-100" style="background-color: #ecfdf5;">
-    <p>© 2024 SMKN 5 Samarinda - Program Literasi Al-Quran</p>
+    <p>© 2026 SMKN 5 Samarinda - Program Literasi Al-Quran</p>
    </footer><!-- Delete Confirmation Modal -->
    <div id="delete-modal" class="hidden fixed inset-0 z-50 flex items-center justify-center p-4" style="background-color: rgba(0,0,0,0.5);">
     <div class="bg-white rounded-2xl shadow-2xl max-w-sm w-full p-6">
